footer padding / alignment fixes

--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -137,12 +137,23 @@ a {
     border-radius: 10rem;
 }
 
+.btn:focus,
+.btn:active {
+    outline: none;
+    box-shadow: none;
+}
+
 /* DIVIDER */
 .divider {
     width: 3.25rem;
     max-width: 3.25rem;
     border-width: 0.2rem;
     border-color: $color5;
+}
+
+/* FONT AWESOME */
+i {
+    vertical-align: middle;
 }
 
 /* MEDIA QUERIES */
